// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AmeliproCaptcha > Snapshots > renders the component with all properties filled in 1`] = `
<amelipro-card-stub
  bordercolor="ap-grey-lighten-2"
  bordered="true"
  cardcolor="ap-grey-lighten-5"
  divider="true"
  headerrightwidth="50%"
  nocardheader="true"
  rightpart="false"
  rightpartwidth="25%"
  titlecolor="ap-grey-darken-1"
  titlelevel="2"
  uniqueid="modified-unique-id"
></amelipro-card-stub>
`;

exports[`AmeliproCaptcha > Snapshots > renders the component with only required properties filled in 1`] = `
<amelipro-card-stub
  bordercolor="ap-grey-lighten-2"
  bordered="true"
  cardcolor="ap-grey-lighten-5"
  divider="true"
  headerrightwidth="50%"
  nocardheader="true"
  rightpart="false"
  rightpartwidth="25%"
  titlecolor="ap-grey-darken-1"
  titlelevel="2"
  uniqueid="required-unique-id"
></amelipro-card-stub>
`;
